--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,30 @@
 <div class="home">
   <div class="containerPrincipal">
-  
+    <section class="title">
+      <div class="vector"></div>
+      <span class="name">Cifrado Afín</span>
+    </section>
+    <section class="contentData" style="border: ridge;">
+      <span class="subTitle1">Encriptar</span>
+      <div class="contentButton" style="border: ridge;">
+        <div class="constDecimacion">
+          <span class="name">Constante Decimación (A)</span>
+          <input type="text" class="inputNumber" placeholder="costante (A)">
+        </div>
+
+        <div class="constDecimacion">
+          <span class="name">Constante Desplazamiento (B)</span>
+          <input type="text" class="inputNumber" placeholder="costante (B)">
+        </div>
+
+        <div class="constDecimacion">
+          <div class="contentButtom">
+            <button class="buttom"> <span class="nameButtom">Encriptar</span></button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
   </div>
 </div>
