--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,49 +1,208 @@
 .home {
-        padding: 32px 32px 32px 32px;
-        /* gap: 16px; */
-        position: absolute;
-        width: 1100px;
-        height: 741px;
-        /* left: 194px; */
-        top: 183px;
-        /* text-align: center; */
-        margin: 6px 5px 36px 5rem;
-        /* display: grid; */
-        grid-gap: 0rem;
-        gap: 1rem;
-        grid-auto-rows: 34rem;
-        grid-template-columns: repeat(auto-fill, minmax(29rem, 14fr));
-    
+    padding-left: calc((106vw - 1200px) / 2);
+    padding-top: 5rem;
+    grid-gap: 0rem;
+    gap: 1rem;
+    grid-auto-rows: 34rem;
+    grid-template-columns: repeat(auto-fill, minmax(29rem, 14fr));
+    position: relative;
 }
 
 .containerPrincipal {
-    /* accesss */
-
     box-sizing: border-box;
-
-    /* Auto layout */
-
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 24px;
     gap: 24px;
-
-    width: 1044px;
-    height: 268px;
-
-    /* grayscale/White */
-
+    max-width: 1044px;
+    height: 650px;
     background: #ffffff;
-    /* greyscale/Grey 5 */
-
     border: 1px solid #eeeeee;
     border-radius: 8px;
-
-    /* Inside auto layout */
-
     flex: none;
     order: 1;
-    align-self: stretch;
+    align-self: center;
     flex-grow: 0;
+
+    .title {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0px;
+        gap: 24px;
+        max-width: 996px;
+        height: 23px;
+        background: #ffffff;
+        border-radius: 4px 4px 0px 0px;
+        flex: none;
+        order: 0;
+        align-self: stretch;
+        flex-grow: 0;
+
+        .vector {
+            width: 0px;
+            height: 23px;
+            border: 2px solid #ffdc5d;
+            flex: none;
+            order: 0;
+            align-self: stretch;
+            flex-grow: 0;
+        }
+
+        .name {
+            max-width: 988px;
+            height: 23px;
+            font-family: "Roboto Condensed";
+            font-style: normal;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 23px;
+            display: flex;
+            align-items: flex-end;
+            color: #1b1b1b;
+            flex: none;
+            order: 1;
+            flex-grow: 1;
+        }
+    }
+
+    .contentData {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 24px;
+        gap: 24px;
+        max-width: 950px;
+        height: 500px;
+        background: #fbfbfb;
+        border-radius: 8px;
+        flex: none;
+        order: 0;
+        align-self: stretch;
+        flex-grow: 0;
+
+        .subTitle1 {
+            max-width: 589px;
+            height: 19px;
+            font-family: "Roboto Condensed";
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 19px;
+            display: flex;
+            align-items: flex-end;
+            color: #1b1b1b;
+            flex: none;
+            order: 0;
+            align-self: stretch;
+            flex-grow: 0;
+        }
+
+        .contentButton {
+            flex-direction: row;
+            align-items: flex-start;
+            padding: 0px;
+            gap: 24px;
+            max-width: 200px;
+            height: 195px;
+            flex: none;
+            order: 1;
+            align-self: stretch;
+            flex-grow: 0;
+
+            .constDecimacion {
+                margin-top: 2px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0px;
+                gap: 8px;
+                height: 60px;
+                flex: none;
+                order: 0;
+                flex-grow: 1;
+
+                .name {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    padding: 0px;
+                    gap: 8px;
+                    height: 17px;
+                    flex: none;
+                    order: 0;
+                    flex-grow: 0;
+                    font-family: "Roboto Condensed";
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 120%;
+                    color: #1b1b1b;
+                }
+
+                .inputNumber {
+                    box-sizing: border-box;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    padding: 8px 16px;
+                    gap: 10px;
+                    // width: 282.5px;
+                    height: 30px;
+                    background: #ffffff;
+                    border: 1px solid #999999;
+                    border-radius: 5px;
+                    flex: none;
+                    order: 1;
+                    align-self: stretch;
+                    flex-grow: 0;
+                }
+
+                .contentButtom {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: flex-start;
+                    padding: 0px;
+                    width: 126px;
+                    height: 40px;
+                    flex: none;
+                    order: 1;
+                    flex-grow: 0;
+                    margin-left: 34px;
+                    margin-top: 7px;
+
+                    .buttom {
+                        cursor: pointer;
+                        justify-content: center;
+                        align-items: center;
+                        padding: 6px 25px;
+                        width: 126px;
+                        height: 40px;
+                        background: #ffdc5d;
+                        border-radius: 50px;
+                        flex: none;
+                        order: 0;
+
+                        .nameButtom {
+                            width: 45px;
+                            height: 20px;
+                            font-family: "Roboto Condensed";
+                            font-style: normal;
+                            font-weight: 700;
+                            font-size: 14px;
+                            line-height: 20px;
+                            display: flex;
+                            align-items: center;
+                            text-align: center;
+                            color: #016d38;
+                            flex: none;
+                            order: 1;
+                            flex-grow: 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
