--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,27 +4,79 @@
       <div class="vector"></div>
       <span class="name">Cifrado Afín</span>
     </section>
-    <section class="contentData" style="border: ridge;">
+    <section class="contentData">
       <span class="subTitle1">Encriptar</span>
-      <div class="contentButton" style="border: ridge;">
-        <div class="constDecimacion">
-          <span class="name">Constante Decimación (A)</span>
-          <input type="text" class="inputNumber" placeholder="costante (A)">
+      <div class="contentFlex">
+        <div class="contentButton">
+          <div class="constDecimacion">
+            <span class="name">Constante Decimación (A)</span>
+            <input type="text" class="inputNumber" placeholder="costante (A)">
+          </div>
+
+          <div class="constDecimacion">
+            <span class="name">Constante Desplazamiento (B)</span>
+            <input type="text" class="inputNumber" placeholder="costante (B)">
+          </div>
+
+          <div class="constDecimacion">
+            <div class="contentButtom">
+              <button class="buttom"> <span class="nameButtom">Encriptar</span></button>
+            </div>
+          </div>
         </div>
 
-        <div class="constDecimacion">
-          <span class="name">Constante Desplazamiento (B)</span>
-          <input type="text" class="inputNumber" placeholder="costante (B)">
+        <div class="contentButton">
+          <div class="constDecimacion">
+            <span class="name">Texto a Cifrar</span>
+            <textarea class="textEncypt"></textarea>
+          </div>
         </div>
 
-        <div class="constDecimacion">
-          <div class="contentButtom">
-            <button class="buttom"> <span class="nameButtom">Encriptar</span></button>
+        <div class="contentButton">
+          <div class="constDecimacion">
+            <span class="name">Texto a Cifrado</span>
+            <textarea class="textEncypt"></textarea>
+          </div>
+        </div>
+      </div>
+
+      <span class="subTitle1">Des-Encriptar 2</span>
+
+      <div class="contentFlex">
+        <div class="contentButton">
+          <div class="constDecimacion">
+            <span class="name">Constante Decimación (A)</span>
+            <input type="text" class="inputNumber" placeholder="costante (A)">
+          </div>
+
+          <div class="constDecimacion">
+            <span class="name">Constante Desplazamiento (B)</span>
+            <input type="text" class="inputNumber" placeholder="costante (B)">
+          </div>
+
+          <div class="constDecimacion">
+            <div class="contentButtom">
+              <button class="buttom"> <span class="nameButtom">Encriptar</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="contentButton">
+          <div class="constDecimacion">
+            <span class="name">Texto a Cifrar</span>
+            <textarea class="textEncypt"></textarea>
+          </div>
+        </div>
+
+        <div class="contentButton">
+          <div class="constDecimacion">
+            <span class="name">Texto a Cifrado</span>
+            <textarea class="textEncypt"></textarea>
           </div>
         </div>
       </div>
     </section>
 
-    
+
   </div>
 </div>
