--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
       <span class="name">Cifrado Afín - ( C = a*m + b mod n)</span>
     </section>
     <section class="contentData">
+
+      <!-- Cifrar -->
       <span class="subTitle1">Encriptar</span>
       <div class="contentFlex">
         <div class="contentButton">
@@ -40,23 +42,24 @@
         </div>
       </div>
 
-      <span class="subTitle1">Des-Encriptar 2</span>
 
+      <!-- Descifrar -->
+      <span class="subTitle1">Des-Encriptar 2</span>
       <div class="contentFlex">
         <div class="contentButton">
           <div class="constDecimacion">
             <span class="name">Constante Decimación (A)</span>
-            <input type="text" class="inputNumber" placeholder="costante (A)">
+            <input type="text" class="inputNumber" placeholder="costante (A)" disabled="true">
           </div>
 
           <div class="constDecimacion">
             <span class="name">Constante Desplazamiento (B)</span>
-            <input type="text" class="inputNumber" placeholder="costante (B)">
+            <input type="text" class="inputNumber" placeholder="costante (B)" disabled="true">
           </div>
 
           <div class="constDecimacion">
             <div class="contentButtom">
-              <button class="buttom"> <span class="nameButtom">Encriptar</span></button>
+              <button class="buttom" disabled="true"> <span class="nameButtom" disabled="true">Encriptar</span></button>
             </div>
           </div>
         </div>
@@ -64,14 +67,14 @@
         <div class="contentButton">
           <div class="constDecimacion">
             <span class="name">Texto a Cifrar</span>
-            <textarea class="textEncypt"></textarea>
+            <textarea class="textEncypt" disabled="true"></textarea>
           </div>
         </div>
 
         <div class="contentButton">
           <div class="constDecimacion">
             <span class="name">Texto a Cifrado</span>
-            <textarea class="textEncypt"></textarea>
+            <textarea class="textEncypt" disabled="true"></textarea>
           </div>
         </div>
       </div>
