--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
         <div class="contentButton">
           <div class="constDecimacion">
             <span class="name">Texto a Cifrado</span>
-            <textarea class="textEncypt"  [(ngModel)]="encyptMessage"></textarea>
+            <textarea class="textEncypt" [(ngModel)]="encyptMessage"></textarea>
           </div>
         </div>
       </div>
@@ -82,4 +82,18 @@
 
 
   </div>
+</div>
+
+<div class="modalError">
+  <section class="contentError">
+    <div class="imgContent">
+      <img src="../assets/Group.png" alt="error">
+    </div>
+    <span class="mensajeError">Error mENSAJE</span>
+    <div class="buttomError">
+      <button class="app-button-login2" type="submit" >
+        <span class="textButton">Regresar</span>
+     </button>
+    </div>
+  </section>
 </div>
