--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -209,7 +209,6 @@
 
 .contentFlex {
     grid-row: auto;
-    border: ridge;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px -1px 7px 1px rgba(0, 0, 0, 0.6);
@@ -234,4 +233,107 @@
     order: 1;
     align-self: stretch;
     flex-grow: 0;
+}
+
+.modalError {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 16px;
+    margin-top: -32rem;
+    margin-left: 24rem;
+    position: relative;
+    width: 484px;
+    height: 318px;
+    background: #ffffff;
+    box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.42);
+    border-radius: 8px;
+
+    .contentError {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 24px 56px;
+        gap: 32px;
+        width: 366px;
+        height: 262px;
+        flex: none;
+        order: 1;
+        flex-grow: 0;
+
+        .imgContent {
+    
+            width: 64px;
+            height: 64px;
+            flex: none;
+            order: 0;
+            flex-grow: 0;
+        }
+
+        .buttomError {
+    
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: flex-start;
+            padding: 0px;
+            gap: 24px;
+            width: 318px;
+            height: 40px;
+            flex: none;
+            order: 2;
+            flex-grow: 0;
+        }
+    }
+}
+
+.mensajeError {
+    width: 340px;
+    height: 46px;
+    font-family: "Roboto Condensed";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #1b1b1b;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
+
+.app-button-login2:focus {
+    cursor: pointer;
+    outline: 0 none;
+    outline-offset: 0;
+    box-shadow: 0 0 0 0.1rem #345f4a;
+    background-color: #2e8b5d;
+    color: #FFFFFF;
+}
+
+.app-button-login2:hover {
+    cursor: pointer;
+    outline: 0 none;
+    outline-offset: 0;
+    box-shadow: 0 0 0 0.1rem #345f4a;
+    background-color: #2e8b5d;
+    color: #FFFFFF;
+}
+
+.app-button-login2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 16px;
+    width: 160px;
+    height: 40px;
+    background: #FFFFFF;
+    border: 1.4px solid #016D38;
+    box-sizing: border-box;
+    border-radius: 50px;
+    margin: 0 12px;
 }
