--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
   <div class="containerPrincipal">
     <section class="title">
       <div class="vector"></div>
-      <span class="name">Cifrado Afín - ( C = a*m + b mod n)</span>
+      <span class="name">Cifrado Afín Modulo {{n}}</span>
     </section>
     <section class="contentData">
 
       <!-- Cifrar -->
-      <span class="subTitle1">Encriptar</span>
+      <span class="subTitle1">Cifrar Mensaje - ( C = a*m + b mod n)</span>
       <div class="contentFlex">
         <div class="contentButton">
           <div class="constDecimacion">
@@ -22,7 +22,8 @@
 
           <div class="constDecimacion">
             <div class="contentButtom">
-              <button class="app-button-login"> <span class="nameButtom" (click)="encriptar(a,b)">Encriptar</span></button>
+              <button class="app-button-login"> <span class="nameButtom"
+                  (click)="encriptar(a,b)">Encriptar</span></button>
             </div>
           </div>
         </div>
@@ -36,7 +37,7 @@
 
         <div class="contentButton">
           <div class="constDecimacion">
-            <span class="name">Texto a Cifrado</span>
+            <span class="name">Texto Cifrado</span>
             <textarea class="textEncypt" [(ngModel)]="encyptMessage"></textarea>
           </div>
         </div>
@@ -44,37 +45,38 @@
 
 
       <!-- Descifrar -->
-      <span class="subTitle1">Des-Encriptar 2</span>
+      <span class="subTitle1">Descifrar Mensaje - ( M = (i * (c - b)) mod n)</span>
       <div class="contentFlex">
         <div class="contentButton">
           <div class="constDecimacion">
             <span class="name">Constante Decimación (A)</span>
-            <input type="text" class="inputNumber" placeholder="costante (A)" disabled="true">
+            <input type="text" class="inputNumber" placeholder="costante (A)" [(ngModel)]="a">
           </div>
 
           <div class="constDecimacion">
             <span class="name">Constante Desplazamiento (B)</span>
-            <input type="text" class="inputNumber" placeholder="costante (B)" disabled="true">
+            <input type="text" class="inputNumber" placeholder="costante (B)" [(ngModel)]="b">
           </div>
 
           <div class="constDecimacion">
             <div class="contentButtom">
-              <button class="app-button-login" disabled="true"> <span class="nameButtom" disabled="true">Des-Encriptar</span></button>
+              <button class="app-button-login" (click)="decryptText()"> <span
+                  class="nameButtom">Des-Encriptar</span></button>
             </div>
           </div>
         </div>
 
         <div class="contentButton">
           <div class="constDecimacion">
-            <span class="name">Texto a Cifrar</span>
-            <textarea class="textEncypt" disabled="true"></textarea>
+            <span class="name">Texto Cifrado</span>
+            <textarea class="textEncypt" [(ngModel)]="encryptMessageT"></textarea>
           </div>
         </div>
 
         <div class="contentButton">
           <div class="constDecimacion">
-            <span class="name">Texto a Cifrado</span>
-            <textarea class="textEncypt" disabled="true"></textarea>
+            <span class="name">Texto</span>
+            <textarea class="textEncypt" [(ngModel)]="decryptMessage2" type="text"></textarea>
           </div>
         </div>
       </div>
@@ -91,9 +93,9 @@
     </div>
     <span class="mensajeError">{{this.mensajeError}}</span>
     <div class="buttomError">
-      <button class="app-button-login2" type="submit" (click)="closeError()" >
-        <span class="textButton" >Cerrar</span>
-     </button>
+      <button class="app-button-login2" type="submit" (click)="closeError()">
+        <span class="textButton">Cerrar</span>
+      </button>
     </div>
   </section>
 </div>
