--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="containerPrincipal">
     <section class="title">
       <div class="vector"></div>
-      <span class="name">Cifrado Afín Modulo {{n}}</span>
+      <span class="name">Cifrado Afín Módulo {{n}}</span>
     </section>
     <section class="contentData">
 
