--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -214,7 +214,7 @@
     box-shadow: 0px -1px 7px 1px rgba(0, 0, 0, 0.6);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 11rem;
+    gap: 5rem;
 }
 
 .textEncypt {
@@ -304,7 +304,6 @@
     flex-grow: 0;
 }
 
-
 .app-button-login2:focus {
     cursor: pointer;
     outline: 0 none;
@@ -362,4 +361,125 @@
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #DDCC85;
+}
+
+.contentMessage {
+    background-color: white;
+    width: 11rem;
+    height: 31rem;
+    border: ridge;
+    margin-left: 48rem;
+    position: absolute;
+    margin-top: 40px;
+    border-radius: 10px;
+    box-shadow: 0px -1px 7px 1px rgb(0 0 0 / 60%);
+    text-align: justify;
+
+    .content {
+        // margin-top: 10rem;
+        margin-left: 10px;
+        margin-right: 7px;
+    }
+}
+
+.loader {
+    width: 20em;
+    height: 20em;
+    font-size: 10px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loader .face {
+    position: absolute;
+    border-radius: 50%;
+    border-style: solid;
+    animation: animate 3s linear infinite;
+}
+
+.loader .face:nth-child(1) {
+    width: 40%;
+    height: 40%;
+    color: #003fff;
+    border-color: currentColor transparent transparent currentColor;
+    border-width: 0.2em 0.2em 0em 0em;
+    --deg: -45deg;
+    animation-direction: normal;
+}
+
+.loader .face:nth-child(2) {
+    width: 70%;
+    height: 70%;
+    color: lime;
+    border-color: currentColor currentColor transparent transparent;
+    border-width: 0.2em 0em 0em 0.2em;
+    --deg: -135deg;
+    animation-direction: reverse;
+}
+
+.loader .face .circle {
+    position: absolute;
+    width: 50%;
+    height: 0.1em;
+    top: 50%;
+    left: 50%;
+    background-color: transparent;
+    transform: rotate(var(--deg));
+    transform-origin: left;
+}
+
+.loader .face .circle::before {
+    position: absolute;
+    top: -0.5em;
+    right: -0.5em;
+    content: '';
+    width: 1em;
+    height: 1em;
+    background-color: currentColor;
+    border-radius: 50%;
+    box-shadow: 0 0 2em,
+                0 0 4em,
+                0 0 6em,
+                0 0 8em,
+                0 0 10em,
+                0 0 0 0.5em rgba(255, 255, 0, 0.1);
+}
+
+@keyframes animate {
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+
+.titleInfo {
+    font-family: "Roboto Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+}
+
+.contenScroll {
+    scrollbar-color: #ffdc5d transparent;
+}
+
+.contenScroll::-webkit-scrollbar {
+    width: 3px;
+}
+
+.contenScroll::-webkit-scrollbar-thumb {
+    position: static;
+    width: 4px;
+    height: 96px;
+    left: 0px;
+    top: 0px;
+    background: #ffdc5d;
+    border-radius: 50px;
+    flex: none;
+    order: 0;
+    align-self: stretch;
+    flex-grow: 1;
+    margin: 0px 0px;
 }
