--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,8 @@
 
           <div class="constDecimacion">
             <div class="contentButtom">
-              <button class="app-button-login"> <span class="nameButtom"
-                  (click)="encriptar(a,b)">Encriptar</span></button>
+              <button class="app-button-login" (click)="encriptar(a,b)"> <span
+                  class="nameButtom">Encriptar</span></button>
             </div>
           </div>
         </div>
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <div class="contentMessage" >
+      <div class="contentMessage">
         <div class="loader" *ngIf="show">
           <div class="face">
             <div class="circle"></div>
@@ -93,12 +93,14 @@
         <div class="content contenScroll" *ngIf="show" style="overflow-y: scroll; height: 18rem; padding-right: 13px;">
           <span class="titleInfo">La(s) letra(s) que más se repiten:</span>
           <ul *ngFor="let item2 of arrMore">
-            <span style="color: darkred;padding: 5px;margin-left: -3.1rem;font-size: 14px;"> - <b style="text-transform:uppercase;">{{item2.name}}</b> con <b>{{item2.value}}</b> repeticion(es)</span>
+            <span style="color: darkred;padding: 5px;margin-left: -3.1rem;font-size: 14px;"> - <b
+                style="text-transform:uppercase;">{{item2.name}}</b> con <b>{{item2.value}}</b> repeticion(es)</span>
           </ul>
           <br>
           <span class="titleInfo">La(s) letra(s) que menos se repiten:</span>
           <ul *ngFor="let item of arrLess">
-            <span style="color: darkred;padding: 5px;margin-left: -3.1rem;font-size: 14px;"> - <b style="text-transform:uppercase;">{{item.name}}</b> con <b>{{item.value}}</b> repeticion(es)</span>
+            <span style="color: darkred;padding: 5px;margin-left: -3.1rem;font-size: 14px;"> - <b
+                style="text-transform:uppercase;">{{item.name}}</b> con <b>{{item.value}}</b> repeticion(es)</span>
           </ul>
         </div>
       </div>
