--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -343,7 +343,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 8px 16px;
+    // padding: 8px 16px;
     width: 160px;
     height: 40px;
     background: #FFDC5D;
