--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,123 +1,2 @@
-<div class="home">
-  <div class="containerPrincipal">
-    <section class="title">
-      <div class="vector"></div>
-      <span class="name">Cifrado Afín Módulo {{n}}</span>
-    </section>
-    <section class="contentData">
-      <!-- Cifrar -->
-      <span class="subTitle1">Cifrar Mensaje - ( C = a*m + b mod n)</span>
-      <div class="contentFlex">
-        <div class="contentButton">
-          <div class="constDecimacion">
-            <span class="name">Constante Decimación (A)</span>
-            <input type="number" class="inputNumber" placeholder="costante (A)" [(ngModel)]="a">
-          </div>
-
-          <div class="constDecimacion">
-            <span class="name">Constante Desplazamiento (B)</span>
-            <input type="number" class="inputNumber" placeholder="costante (B)" [(ngModel)]="b">
-          </div>
-
-          <div class="constDecimacion">
-            <div class="contentButtom">
-              <button class="app-button-login" (click)="encriptar(a,b)"> <span
-                  class="nameButtom">Encriptar</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="contentButton">
-          <div class="constDecimacion">
-            <span class="name">Texto a Cifrar</span>
-            <textarea class="textEncypt" [(ngModel)]="textACifrar"></textarea>
-          </div>
-        </div>
-
-        <div class="contentButton">
-          <div class="constDecimacion">
-            <span class="name">Texto Cifrado</span>
-            <textarea class="textEncypt" [(ngModel)]="encyptMessage"></textarea>
-          </div>
-        </div>
-      </div>
-
-
-      <!-- Descifrar -->
-      <span class="subTitle1">Descifrar Mensaje - ( M = (i * (c - b)) mod n)</span>
-      <div class="contentFlex">
-        <div class="contentButton">
-          <div class="constDecimacion">
-            <span class="name">Constante Decimación (A)</span>
-            <input type="text" class="inputNumber" placeholder="costante (A)" [(ngModel)]="a">
-          </div>
-
-          <div class="constDecimacion">
-            <span class="name">Constante Desplazamiento (B)</span>
-            <input type="text" class="inputNumber" placeholder="costante (B)" [(ngModel)]="b">
-          </div>
-
-          <div class="constDecimacion">
-            <div class="contentButtom">
-              <button class="app-button-login" (click)="decryptText()"> <span
-                  class="nameButtom">Des-Encriptar</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="contentButton">
-          <div class="constDecimacion">
-            <span class="name">Texto Cifrado</span>
-            <textarea class="textEncypt" [(ngModel)]="encryptMessageT"></textarea>
-          </div>
-        </div>
-
-        <div class="contentButton">
-          <div class="constDecimacion">
-            <span class="name">Texto</span>
-            <textarea class="textEncypt" [(ngModel)]="decryptMessage2" type="text"></textarea>
-          </div>
-        </div>
-      </div>
-
-      <div class="contentMessage">
-        <div class="loader" *ngIf="show">
-          <div class="face">
-            <div class="circle"></div>
-          </div>
-          <div class="face">
-            <div class="circle"></div>
-          </div>
-        </div>
-
-        <div class="content contenScroll" *ngIf="show" style="overflow-y: scroll; height: 18rem; padding-right: 13px;">
-          <span class="titleInfo">La(s) letra(s) que más se repiten:</span>
-          <ul *ngFor="let item2 of arrMore">
-            <span style="color: darkred;padding: 5px;margin-left: -3.1rem;font-size: 14px;"> - <b
-                style="text-transform:uppercase;">{{item2.name}}</b> con <b>{{item2.value}}</b> repeticion(es)</span>
-          </ul>
-          <br>
-          <span class="titleInfo">La(s) letra(s) que menos se repiten:</span>
-          <ul *ngFor="let item of arrLess">
-            <span style="color: darkred;padding: 5px;margin-left: -3.1rem;font-size: 14px;"> - <b
-                style="text-transform:uppercase;">{{item.name}}</b> con <b>{{item.value}}</b> repeticion(es)</span>
-          </ul>
-        </div>
-      </div>
-    </section>
-  </div>
-</div>
-
-<div class="modalError" *ngIf="showError">
-  <section class="contentError">
-    <div class="imgContent">
-      <img src="../assets/Group.png" alt="error">
-    </div>
-    <span class="mensajeError">{{this.mensajeError}}</span>
-    <div class="buttomError">
-      <button class="app-button-login2" type="submit" (click)="closeError()">
-        <span class="textButton">Cerrar</span>
-      </button>
-    </div>
-  </section>
-</div>
+<h1>Test Heroku</h1>
+<h2>Johnf Buitragoq</h2>
