--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,62 @@
-<h1>Test Heroku</h1>
-<h2>Johnf Buitragoq</h2>
+<header id="header" class="header">
+    <img alt="pokebola" src="../assets/images/pokebola.png" class="header__img"/>
+    <h3 class="header__title">Pokédex_</h3>
+</header>
+<main id="main" class="main">
+    <div class="main__container">
+        <header class="main__header card">
+            <img alt="fire-icon" src="../assets/images/fire.png" class="main__header-img"/>
+            <h2 class="main__header-title">Charizard</h2>
+        </header>
+        <figure class="main__figure">
+            <img alt="charizard" src="../assets/images/charizard.png" class="main__figure-img"/>
+        </figure>
+        <div class="main__information card">
+            <div>
+                <h5>No.</h5>
+                <h3>006</h3>
+            </div>
+            <div>
+                <h5>Level</h5>
+                <h3>100</h3>
+            </div>
+            <div>
+                <h5>Type</h5>
+                <h3>Fire</h3>
+            </div>
+            <div>
+                <h5>Hability</h5>
+                <h3>Flames</h3>
+            </div>
+            <div>
+                <h5>Height</h5>
+                <h3>1,7 m</h3>
+            </div>
+            <div>
+                <h5>Weight</h5>
+                <h3>90,5 Kg</h3>
+            </div>
+        </div>
+    </div>
+</main>
+<footer id="footer" class="footer">
+    <div class="footer__container">
+        <h3 class="footer__title">Others</h3>
+        <div>
+            <img src="../assets/images/squirtle.png" alt="squirtle" />
+            <span class="tooltip">Squirtle</span>
+        </div>
+        <div>
+            <img src="../assets/images/newton.png" alt="newton" />
+            <span class="tooltip">Newton</span>
+        </div>
+        <div>
+            <img src="../assets/images/arcanine.png" alt="arcanine" />
+            <span class="tooltip">Arcanine</span>
+        </div>
+        <div>
+            <img src="../assets/images/snorlax.png" alt="snorlax" />
+            <span class="tooltip">Snorlax</span>
+        </div>
+    </div>
+</footer>
